bug-fix alignment of eventType and button

--- a/packages/lego-bricks/src/components/Layout/Page/Page.module.css
+++ b/packages/lego-bricks/src/components/Layout/Page/Page.module.css
@@ -39,8 +39,9 @@
 }
 
 .buttonGroup {
-  flex-grow: 1;
+  flex-grow: 0;
   justify-content: flex-end;
+  margin-left: auto;
 }
 
 .description {
